trying to get this to deploy on github pages.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pokedex-app",
+  "name": "Pokedex-App",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://tomtimusprime.github.io/Employee-Directory/",
